sonar c omments